add search capabilty through Google when a user inputs a value

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
           </svg>
         </span>
       </div>
-      <input id="search-input" />
+      <input id="searchInput" />
     </section>
     <section id="buttons">
-      <button id="Google-Search">Google Search</button>
+      <button id="googleSearch">Google Search</button>
       <button id="Im-Feeling-Lucky">I'm Feeling Lucky</button>
     </section>
     <p id="lang-option">
@@ -69,5 +69,6 @@
         </section>
       </footer>
     </section>
+    <script src="scripts/script.js"></script>
   </body>
 </html>
